overflow fix

--- a/src/app.scss
+++ b/src/app.scss
@@ -16,7 +16,7 @@ html {
 }
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
   background-color: $background-color;
   color: $text-primary-color;
 }
